// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header DOM rendering renders correctly with custom classes 1`] = `
<header
  className="a b c"
  onClick={[Function]}
>
  Test
</header>
`;

exports[`Header DOM rendering renders correctly with default props 1`] = `
<header
  className="general KambiWidget-card-support-text-color KambiWidget-card-header-border"
  onClick={[Function]}
>
  Test
</header>
`;

exports[`Header DOM rendering renders correctly with pageType != 'home' 1`] = `
<header
  className="general KambiWidget-card-support-text-color KambiWidget-card-header-border KambiWidget-header kwNotHome"
  onClick={[Function]}
>
  Test
</header>
`;
